# cbse-question-paper-genrator-deep-agent

./: .coverage  .env.example  .gitignore  AGENTS.md  DIAGRAM_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  README.md  TEACHER_REVIEW_REPORT.md  pyproject.toml  run.py  run_tests.bat  run_tests.sh
config/: agent_config.py
display/: agent_display.py
input/: blueprint_first_term_50.json
input/classes/10/english/: blueprint.json
input/classes/10/mathematics/: input_first_term.json
input/classes/10/science/: blueprint.json
input/classes/9/mathematics/: blueprint.json
output/: blueprint.json  mathematics_class10_first_term_20260201_120000_a7f3d.json  preview_mathematics_class10_first_term_20260203_144540_cbc0a.json  test_generated_questions.json  test_retrieved_chunks.json
skills/cbse/class_10/mathematics/: SKILL.md  SKILL.md.backup
skills/cbse/class_10/mathematics/references/: BLUEPRINT_REFERENCE.md  GENERATION_WORKFLOW.md
skills/cbse/class_10/mathematics/scripts/: difficulty_calculator.py  validators.py
skills/cbse/common/: DIFFICULTY_DISTRIBUTION.md  QUALITY_GUIDELINES.md  QUESTION_FORMATS.json  QUESTION_PAPER_FORMAT.json
src/: __init__.py  run.py
src/blueprint_validation/: __init__.py  tool.py
src/cbse_question_retriever/: __init__.py  chunk_mixer.py  data_types.py  diagram_detector.py  embedder.py  fuzzy_matcher.py  llm_client.py  llm_question_generator.py  mock_data.py  output_schema.py  prompt_templates.py  qdrant_client.py  question_id_generator.py  response_parser.py  retriever.py  settings.py  tool.py
src/cbse_question_retriever/few_shot_examples/: __init__.py  base.py
src/cbse_question_retriever/few_shot_examples/mathematics/: __init__.py  class_10.py
src/config/: agent_config.py
src/curriculum_search/: __init__.py  tool.py
src/diagram_generation/: __init__.py  tool.py
src/display/: agent_display.py
src/docx_generation/: __init__.py  tool.py
src/input/: blueprint_first_term_50.json
src/input_file_locator/: __init__.py  tool.py
src/paper_validation/: __init__.py
src/question_assembler/: __init__.py  data_types.py  tool.py
src/question_generation/: __init__.py  config.py  orchestrator.py
src/question_generation/skills/question-assembly/: SKILL.md
src/skills/: SKILL.md
src/skills/blueprint-validator/: SKILL.md
src/skills/cbse-question-retriever/: SKILL.md
src/skills/cbse/class_10/mathematics/: SKILL.md
src/skills/cbse/class_10/mathematics/references/: blueprint.json
src/skills/docx-generator/: SKILL.md
src/skills/input-file-locator/: SKILL.md
src/skills/paper-validator/: SKILL.md
src/skills/query-optimizer/: SKILL.md
src/skills/question-assembler/: SKILL.md
src/tools/: blueprint_validator.py  curriculum_searcher.py  diagram_generator.py  paper_validator.py
tests/: __init__.py  conftest.py  test_blueprint_validator.py
tests/fixtures/: mock_llm_responses.json  mock_qdrant_data.json
tests/fixtures/exam_blueprints/: advanced_formats.json  all_topics_keyword.json  comprehensive_violations.json  invalid_format.json  invalid_internal_choice.json  invalid_schema_10.json  invalid_topic_focus.json  invalid_topic_focus_type.json  missing_topic_focus.json  missing_topics.json  valid_schema_11.json
tests/test_blueprint_validation/: __init__.py
tests/test_cache/: __init__.py  test_cache.py  test_diagram_storage.py
tests/test_cbse_question_retriever/: test_chunk_mixer.py  test_fuzzy_matcher.py  test_question_id.py
tests/test_curriculum_search/: __init__.py
tests/test_integration/: mock_llm_loader.py  test_end_to_end.py  test_qdrant_contents.py
tests/test_question_generation/: __init__.py  test_blueprint_parsing.py  test_difficulty_distribution.py  test_question_id_format.py  test_tavily_search.py
tools/: __init__.py  blueprint_validator.py
